# Sovereign-codex-core

./: .gitignore  CODEX_KERNEL.md  README.md  VALUE_KERNEL_LINEAGE.md  fork.html (optional standalone redirect button)  index-2.html  index.html (Codex-Core Landing Page)  index_codex_core.html
LICENSES/: LICENSE_CODE_MIT.md  LICENSE_CONTENT_CC-BY-SA-4.0.md
SIB-core/: README.md  manifest.yaml
SIB-core/playbooks/: 00-bootstrap.md  01-continuum-expansion.md
SIB-core/protocols/: guardrails.md
SIB-core/python/: README.md  pyproject.toml
SIB-core/python/sib_core/: __init__.py  core_flows.py  flows.py  manifest.py
SIB-core/streams/: continuum-heartbeat.json  continuum-mirror.json  example-stream.json
SovereignCodex-Core/: Sovereign_Codex_core_overview.md
audits/: audit_AVOT_lattice_2026_Q1.md
constitution/: AVOT_Constitutional_Header_Spec.md  AVOT_Lifecycle_State_Machine.md  Emergence_Record_Schema.md  TYME_Charter_of_Emergence.md
emergence_records/: emergence_record_AVOT-ARCHIVIST_retroactive.yaml
glyphs/: README.md
index-ui/: index.html
ko/samples/: ko-sample-0001.json
ko/schema/: knowledge_object.schema.json
registry/: avot_registry.yaml  systems_registry.yaml
scripts/: build_rag_index.py
scrolls/: 000-PREFACE.md  Ratification_Scroll.md
scrolls/100-Scroll-of-Convergence/: KEYSTONE_STANZA.md
