[project]
name = "sib-core"
version = "0.2.0"
description = "Sovereign Intelligence Base core flows and manifest helpers"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Sovereign Net Core Team", email = "core@sovereign.net" }
]
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
extras = ["PyYAML>=6.0"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
